--- a/styles/blocks/header/_nav.scss
+++ b/styles/blocks/header/_nav.scss
@@ -15,7 +15,7 @@
             }
 
             @include isHover {
-                text-decoration: none;
+                text-decoration: underline;
             }
         }
     }
