--- a/styles/main.css
+++ b/styles/main.css
@@ -63,11 +63,6 @@
      object-fit: cover;
 }
 
-.link {
-  text-decoration: none;
-  color: inherit;
-}
-
 .list {
   margin: 0;
   padding: 0;
@@ -121,6 +116,22 @@
   min-width: 13.125rem;
   transition: border 0.4s ease-in-out, color 0.4s ease-in-out, background-color 0.4s ease-in-out, box-shadow 0.4s ease-in-out, outline 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
+.button:focus {
+  outline: none;
+}
+.button:focus-visible {
+  outline: 2px solid #000000;
+}
+@media (hover: hover) {
+  .button:hover {
+    border: 1px solid #000000;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.8);
+  }
+}
+.button:active {
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.2);
+}
 .button_inline {
   border: 1px solid #B3B3B3;
   color: #000000;
@@ -141,25 +152,30 @@
 }
 @media (hover: hover) {
   .button_ico:hover {
+    border: none;
     transform: scale(0.8);
   }
 }
-.button:focus {
+
+.link {
+  text-decoration: none;
+  color: inherit;
+  transition: color 0.4s ease-in-out;
+  border-radius: 0.5rem;
+}
+.link:focus {
   outline: none;
 }
-.button:focus-visible {
+.link:focus-visible {
   outline: 2px solid #000000;
-  outline-offset: 2px;
 }
 @media (hover: hover) {
-  .button:hover {
-    border: 1px solid #000000;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.8);
+  .link:hover {
+    color: rgba(0, 0, 0, 0.5);
   }
 }
-.button:active {
-  outline: none;
-  background-color: rgba(0, 0, 0, 0.2);
+.link:active {
+  color: rgba(0, 0, 0, 0.5);
 }
 
 /* Blocks styles */
@@ -174,8 +190,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30px;
-  height: 30px;
+  width: 45px;
+  height: 45px;
   padding: 1rem 0.5rem;
   transition: background-color transform 0.4s ease-in-out;
 }
@@ -214,7 +230,7 @@
 }
 @media (hover: hover) {
   .nav__list-link:hover {
-    text-decoration: none;
+    text-decoration: underline;
   }
 }
 
@@ -517,25 +533,59 @@
 .footer__contacts-link:last-child {
   text-transform: uppercase;
 }
+.footer__contacts-link:focus {
+  outline: none;
+}
+.footer__contacts-link:focus-visible {
+  outline: 2px solid #ffffff;
+}
+.footer__contacts-link:active {
+  color: rgba(255, 255, 255, 0.5);
+}
 .footer__product {
   font-family: "Roboto", sans-serif;
 }
 .footer__text {
   font-size: 1.125rem;
 }
+.footer__text:focus {
+  outline: none;
+}
+.footer__text:focus-visible {
+  outline: 2px solid #ffffff;
+}
+@media (hover: hover) {
+  .footer__text:hover {
+    color: rgba(255, 255, 255, 0.5);
+  }
+}
+.footer__text:active {
+  color: rgba(255, 255, 255, 0.5);
+}
 .footer__logo {
   font-weight: 900;
   font-size: 1.5rem;
 }
 
-.modal__inner {
-  flex-direction: column;
-  border: none;
-  padding: 1.25rem 1.25rem 1.875rem 1.25rem;
+.modal {
+  padding: 0;
+  justify-content: center;
+  align-items: center;
   max-width: 30rem;
-  min-height: 595px;
-  height: 595px;
+  min-height: 33.7rem;
+  border: none;
+  background-color: transparent;
+  overflow: visible;
+}
+.modal__inner {
+  padding: 1.25rem 1.25rem 1.875rem 1.25rem;
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  gap: 1.5rem;
+  background-color: transparent;
+  overflow: hidden;
+  background-color: #ffffff;
   border-radius: 0.625rem;
 }
 .modal__inner::after {
@@ -543,11 +593,15 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  inset: 0;
-  border: 2px solid #fff;
+  top: -1px;
+  left: -1px;
+  border: 2px solid #ffffff;
   border-radius: 0.625rem;
   transform: rotate(2deg);
   z-index: -1;
+}
+.modal__content {
+  gap: 1.5rem;
 }
 .modal__title {
   font-size: 1.75rem;
@@ -556,20 +610,11 @@
   font-size: 1.125rem;
   font-weight: 400;
 }
-.modal:has(.modal__inner[open]) {
-  position: absolute;
-  inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-}
-.modal:has(.modal__inner[open]) .modal__inner {
+.modal:has(#modal[open]) {
   display: flex;
 }
-.modal:not(:has(.modal__inner[open])) {
-  z-index: 0;
+.modal::backdrop {
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .form {
@@ -597,6 +642,7 @@
   padding: 0.625rem;
   border: 1px solid #B3B3B3;
   border-radius: 0.5rem;
+  font-size: 100%;
 }
 .form__input, .form__textarea {
   width: 100%;
@@ -616,7 +662,7 @@
   position: absolute;
   top: 50%;
   right: 0.5rem;
-  transition: fill 0.4s ease-in-out;
+  transition: fill 0.4s ease-in-out, transform 0.4s ease-in-out;
   transform: translateY(-50%);
   fill: #868686;
 }
@@ -624,12 +670,10 @@
   outline: none;
 }
 .form__input:focus-visible, .form__textarea:focus-visible {
-  outline: 2px solid #000000;
+  border-radius: 0.5rem;
+  outline: 2px solid rgba(0, 0, 0, 0.6);
   outline-offset: 2px;
-}
-.form__input:active, .form__textarea:active {
-  outline: none;
-  background-color: rgba(0, 0, 0, 0.2);
+  filter: drop-shadow(2px 0px 4px rgba(0, 0, 0, 0.5));
 }
 .form__input:valid, .form__textarea:valid {
   border-color: #00b300;
@@ -642,6 +686,10 @@
 }
 .form__input:invalid + svg, .form__textarea:invalid + svg {
   fill: #ff2b2b;
+}
+.form__input:active, .form__textarea:active {
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 .form__input::-moz-placeholder, .form__textarea::-moz-placeholder {
   color: rgba(0, 0, 0, 0.4);
@@ -682,6 +730,16 @@
 }
 .form__input:placeholder-shown + svg, .form__textarea:placeholder-shown + svg {
   fill: #868686;
+}
+@media (hover: hover) {
+  .form__input:-moz-placeholder-shown:hover + svg, .form__textarea:-moz-placeholder-shown:hover + svg {
+    transform: translateY(-50%) scale(1.1);
+    fill: #000000;
+  }
+  .form__input:placeholder-shown:hover + svg, .form__textarea:placeholder-shown:hover + svg {
+    transform: translateY(-50%) scale(1.1);
+    fill: #000000;
+  }
 }
 .form__textarea {
   padding: 0.625rem 2.5rem 0.625rem 0.625rem;
@@ -998,5 +1056,10 @@
   }
   .modal__inner {
     margin: auto 1rem;
+  }
+  .modal__inner::after {
+    top: -0.5%;
+    left: 2.5%;
+    width: 93%;
   }
 }/*# sourceMappingURL=main.css.map */
