--- a/styles/other/_vars.scss
+++ b/styles/other/_vars.scss
@@ -18,7 +18,7 @@ $section-padding-mob: 2.5rem 0;
 $modal-title-fs: 1.75rem;
 $modal-desc-fs: 1.125rem;
 $modal-width: 30rem;
-$modal-height: 595px;
+$modal-height: 33.7rem;
 $modal-border-radius: 0.625rem;
 $modal-padding: 1.25rem 1.25rem 1.875rem 1.25rem;
 $modal-gap: 1.5rem;
