--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -33,11 +33,6 @@
     object-fit: cover;
 }
 
-.link {
-    text-decoration: none;
-    color: inherit;
-}
-
 .list {
     margin: 0;
     padding: 0;
@@ -56,3 +51,4 @@
 @import './other/_section';
 @import './other/_title';
 @import './other/_button';
+@import './other/link';
