--- a/styles/blocks/modal/_modal.scss
+++ b/styles/blocks/modal/_modal.scss
@@ -1,14 +1,22 @@
 .modal {
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    max-width: $modal-width;
+    min-height: $modal-height;
+    border: none;
+    background-color: transparent;
+    overflow: visible;
 
     &__inner {
-        // position: relative;
-        flex-direction: column;
-        border: none;
         padding: $modal-padding;
-        max-width: $modal-width;
-        min-height: $modal-height;
-        height: $modal-height;
+        display: flex;
+        flex-direction: column;
         justify-content: space-between;
+        gap: $modal-gap;
+        background-color: transparent;
+        overflow: hidden;
+        background-color: $white-color;
         border-radius: $modal-border-radius;
 
         &::after {
@@ -16,12 +24,17 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            inset: 0;
-            border: 2px solid #fff;
+            top: -1px;
+            left: -1px;
+            border: 2px solid $white-color;
             border-radius: $modal-border-radius;
             transform: rotate(2deg);
             z-index: -1;
         }
+    }
+
+    &__content {
+        gap: $modal-gap;
     }
 
     &__title {
@@ -33,21 +46,11 @@
         font-weight: 400;
     }
 
-    &:has(.modal__inner[open]) {
-        position: absolute;
-        inset: 0;
+    &:has(#modal[open]) {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
-
-        .modal__inner {
-            display: flex;
-        }
     }
 
-    &:not(:has(.modal__inner[open])) {
-        z-index: 0;
+    &::backdrop {
+        background-color: rgba($site-main-color, 0.6);
     }
 }
