fix banner image

--- a/styles/blocks/banner/_banner.scss
+++ b/styles/blocks/banner/_banner.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     background-color: gray;
     height: 630px;
-    background-image: url('/img/banner/banner.jpg');
+    background-image: url('../img/banner/banner.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
