--- a/styles/blocks/strong-points/_strong-points.scss
+++ b/styles/blocks/strong-points/_strong-points.scss
@@ -29,10 +29,8 @@
                 gap: 20px;
             }
 
-            .img {
-                width: 100%;
-                height: 555px;
-                object-fit: cover;
+            .image {
+                max-height: 555px;
             }
         }
     }
