--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin font-face($font-family, $dir, $name, $weight, $style) {
     @font-face {
       font-family: "#{$font-family}";
-      src: local("/fonts"),
+      src: local("../fonts"),
         local(#{$font-family}),
         url("../fonts/#{$dir}/#{$name}.woff2") format("woff2"),
         url("../fonts/#{$dir}/#{$name}.woff") format("woff"),
