--- a/styles/blocks/strong-points/_strong-points.scss
+++ b/styles/blocks/strong-points/_strong-points.scss
@@ -31,6 +31,8 @@
 
             .image {
                 max-height: 555px;
+                min-height: 555px;
+                min-width: 335px;
             }
         }
     }
