--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -27,9 +27,11 @@
 }
 
 .image {
+    display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-color: gray;
 }
 
 .list {
