--- a/styles/blocks/designers/_designers.scss
+++ b/styles/blocks/designers/_designers.scss
@@ -19,6 +19,7 @@
 
             & .image {
                 max-height: 440px;
+                min-height: 440px;
             }
 
             &:first-child {
@@ -31,6 +32,7 @@
 
                 .image{
                     max-height: 540px;
+                    min-height: 540px;
                 }
             }
         }
