fixed min sizes for images

--- a/styles/blocks/biography/_biography.scss
+++ b/styles/blocks/biography/_biography.scss
@@ -13,8 +13,9 @@
         height: auto;
 
         &-photo {
+            width: 100%;
             .image {
-                min-width: 571px;
+                min-width: 100%;
                 min-height: 840px;
             }
         }
