--- a/styles/blocks/strong-points/_strong-points.scss
+++ b/styles/blocks/strong-points/_strong-points.scss
@@ -32,7 +32,7 @@
             .image {
                 max-height: 555px;
                 min-height: 555px;
-                min-width: 335px;
+                // min-width: 335px;
             }
         }
     }
