--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -199,6 +199,12 @@
 
             &-photo {
                 width: 100%;
+                height: 400px;
+
+                .image {
+                    min-width: 100%;
+                    min-height: 100%;
+                }
             }
         }
 
