--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -164,7 +164,7 @@
         margin-top: -4.6875rem;
         align-items: flex-start;
         height: calc(100dvh - 75px);
-        background-image: url('/img/banner/banner-mob.png');
+        background-image: url('../img/banner/banner-mob.png');
 
         &__content {
             max-width: unset;
