fixed banner class

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,7 +3,7 @@
 
 /* Blocks styles */
 @import './blocks/header/_header';
-@import './blocks/banner/_banner';
+@import './blocks/hero/_hero';
 @import './blocks/biography/_biography';
 @import './blocks/designers/designers';
 @import './blocks/testimonials/_testimonials';
