--- a/styles/main.css
+++ b/styles/main.css
@@ -236,7 +236,7 @@
   }
 }
 
-.banner {
+.hero {
   padding: 0;
   display: flex;
   align-items: center;
@@ -248,7 +248,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-.banner__content {
+.hero__content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -261,7 +261,7 @@
   padding: 4.0625rem;
   box-sizing: border-box;
 }
-.banner__text {
+.hero__text {
   margin: 0;
   margin-top: 15px;
   font-size: 1.25rem; /* 20px */
